refactoring start parsing arguments

--- a/src/cat/Makefile
+++ b/src/cat/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-CFLAGS=-Wall -Wextra -Werror
+CFLAGS=-Wall -Wextra -Werror --std=c11
 BUILDDIR=../../build
 
 all: s21_cat
@@ -7,14 +7,14 @@ all: s21_cat
 $(BUILDDIR):
 	mkdir -p $@
 
-%.o: $.c
-	$(CC) $(CFLAGS) -c $@ -o $<
+.PHONY: s21_cat
+s21_cat: $(wildcard *.c) | $(BUILDDIR)
+	$(CC) $(CFLAGS) $^ -o $(BUILDDIR)/$@
 
-s21_cat: main.o | $(BUILDDIR)
-	$(CC) $^ -o $(BUILDDIR)/$@
-
+.PHONY: rebuild
 rebuild: clean all
 
+.PHONY: clean
 clean:
 	rm -rf $(BUILDDIR)
 	rm -rf *.o
