--- a/src/cat/Makefile
+++ b/src/cat/Makefile
@@ -2,14 +2,17 @@ CC=gcc
 CFLAGS=-Wall -Wextra -Werror --std=c11 --pedantic
 EXEC=s21_cat
 
-all: $(EXEC)
+all: rebuild
 
 .PHONY: $(EXEC)
-$(EXEC): $(wildcard *.c) | $(BUILDDIR)
+$(EXEC): $(wildcard *.c)
 	$(CC) $(CFLAGS) $^ -o $@
 
 .PHONY: rebuild
-rebuild: clean all
+rebuild: clean $(EXEC)
+
+debug: CFLAGS+=-g
+debug: rebuild
 
 .PHONY: clean
 clean:
