--- a/src/grep/Makefile
+++ b/src/grep/Makefile
@@ -1,20 +1,3 @@
-CC=gcc
-CFLAGS=-Wall -Wextra -Werror
-BUILDDIR=../../build
+EXEC=s21_grep
 
-all: s21_grep
-
-$(BUILDDIR):
-	mkdir -p $@
-
-%.o: $.c
-	$(CC) $(CFLAGS) -c $@ -o $<
-
-s21_grep: main.o | $(BUILDDIR)
-	$(CC) $^ -o $(BUILDDIR)/$@
-
-rebuild: clean all
-
-clean:
-	rm -rf $(BUILDDIR)
-	rm -rf *.o
+include ../common/Makefile
